# simple_project_homework

./: Makefile.am  README.md  configure.ac  func.c  header.h  main.c
